# cc-experiments

./: .gitignore  .gitleaks.toml  AGENT_A4_QUICK_REFERENCE.txt  AGENT_A4_REPORT.md  AGENT_A5_REPORT.md  CLAUDE.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_PLAN.md  LICENSE  MIGRATION.md  PLUGIN.md  README.md  RESOURCES_IMPROVEMENT_PLAN.md  RESOURCES_PROOF_OF_CONCEPT.md  SECURITY_AUDIT_IMPROVEMENTS.md  SKILLS_USAGE_GUIDE.md  STATUS.md  security-report-ci.json  skills-audit-report.json
skills/rust/pyo3-async-embedded-wasm/resources/examples/01_async_basic/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/01_async_basic/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/02_tokio_runtime/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/02_tokio_runtime/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/04_async_streams/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/04_async_streams/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/07_event_loop/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/07_event_loop/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/08_wasm_basic/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/08_wasm_basic/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/09_async_io/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/09_async_io/src/: lib.rs
skills/rust/pyo3-async-embedded-wasm/resources/examples/10_production_service/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-async-embedded-wasm/resources/examples/10_production_service/src/: lib.rs
skills/rust/pyo3-cli-tools/resources/examples/07_config_management/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-cli-tools/resources/examples/07_config_management/src/: lib.rs
skills/rust/pyo3-cli-tools/resources/examples/10_production_cli/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-cli-tools/resources/examples/10_production_cli/src/: lib.rs
skills/rust/pyo3-collections-iterators/resources/examples/01_basic_iterator/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-collections-iterators/resources/examples/01_basic_iterator/src/: lib.rs
skills/rust/pyo3-collections-iterators/resources/examples/02_collection_conversion/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-collections-iterators/resources/examples/02_collection_conversion/src/: lib.rs
skills/rust/pyo3-collections-iterators/resources/examples/03_sequence_protocol/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-collections-iterators/resources/examples/03_sequence_protocol/src/: lib.rs
skills/rust/pyo3-collections-iterators/resources/examples/04_lazy_iterator/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-collections-iterators/resources/examples/04_lazy_iterator/src/: lib.rs
skills/rust/pyo3-data-science/resources/examples/01_basic_numpy/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-data-science/resources/examples/01_basic_numpy/src/: lib.rs
skills/rust/pyo3-data-science/resources/examples/03_parallel_numpy/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-data-science/resources/examples/03_parallel_numpy/src/: lib.rs
skills/rust/pyo3-data-science/resources/examples/04_pandas_create/: Cargo.toml  README.md  pyproject.toml  test_example.py
skills/rust/pyo3-data-science/resources/examples/04_pandas_create/src/: lib.rs
skills/rust/pyo3-dspy-agents/resources/examples/agent-observability/: Cargo.toml  README.md  docker-compose.yml  tracing_config.toml
skills/rust/pyo3-dspy-agents/resources/examples/agent-observability/src/: lib.rs  main.rs
skills/rust/pyo3-dspy-agents/resources/examples/basic-react/: Cargo.toml  README.md
skills/rust/pyo3-dspy-agents/resources/examples/basic-react/src/: main.rs
skills/rust/pyo3-dspy-agents/resources/examples/multi-step-reasoning/: Cargo.toml  README.md
skills/rust/pyo3-dspy-agents/resources/examples/multi-step-reasoning/src/: lib.rs  main.rs
skills/rust/pyo3-dspy-agents/resources/examples/parallel-agents/: Cargo.toml  README.md
skills/rust/pyo3-dspy-agents/resources/examples/parallel-agents/src/: lib.rs  main.rs
skills/rust/pyo3-dspy-agents/resources/examples/production-agent-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml
skills/rust/pyo3-dspy-agents/resources/examples/production-agent-service/src/: lib.rs  main.rs
skills/rust/pyo3-dspy-agents/resources/examples/stateful-agent/: Cargo.toml  README.md
skills/rust/pyo3-dspy-agents/resources/examples/tool-using-agent/: Cargo.toml  README.md
skills/rust/pyo3-dspy-async-streaming/resources/examples/backpressure-control/: Cargo.toml  PROJECT_SUMMARY.md  README.md
skills/rust/pyo3-dspy-async-streaming/resources/examples/concurrent-batch/: Cargo.toml  README.md
skills/rust/pyo3-dspy-async-streaming/resources/examples/performance-monitoring/: .gitignore  Cargo.toml  README.md  docker-compose.yml  prometheus.yml
skills/rust/pyo3-dspy-async-streaming/resources/examples/timeout-cancellation/: Cargo.toml  README.md
skills/rust/pyo3-dspy-async-streaming/resources/examples/token-streaming/: Cargo.toml  README.md
skills/rust/pyo3-dspy-async-streaming/resources/examples/tokio-asyncio-bridge/: .gitignore  Cargo.toml  README.md  requirements.txt
skills/rust/pyo3-dspy-async-streaming/resources/examples/websocket-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  prometheus.yml
(+2012 files in other folders)
