[package]
name = "async_basic"
version = "0.1.0"
edition = "2021"

[lib]
name = "async_basic"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
