[package]
name = "tokio_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokio_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
