[package]
name = "async_streams"
version = "0.1.0"
edition = "2021"

[lib]
name = "async_streams"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
