[package]
name = "wasm_basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
