[package]
name = "production_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "production_cli"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rayon = "1.8"
walkdir = "2.4"
num_cpus = "1.16"
