[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pandas-create"
version = "0.1.0"
description = "Create Pandas DataFrames from Rust with PyO3"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "pandas_create"
