[package]
name = "agent-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

[[bin]]
name = "agent-observability"
path = "src/main.rs"

[lib]
name = "agent_observability"
path = "src/lib.rs"
