[package]
name = "parallel-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dashmap = "6.0"

[[bin]]
name = "parallel-agents"
path = "src/main.rs"

[lib]
name = "parallel_agents"
path = "src/lib.rs"
