[package]
name = "production-agent-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "production_agent_service"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# PyO3 and Python integration
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py38"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics and observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
