[package]
name = "stateful-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "stateful_agent"
crate-type = ["cdylib"]

[[bin]]
name = "stateful-agent"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "chrono"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
