[package]
name = "tool-using-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[[bin]]
name = "tool-using-agent"
path = "src/main.rs"

[lib]
name = "tool_using_agent"
path = "src/lib.rs"
