[package]
name = "backpressure-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Async utilities
futures = "0.3"

# Python integration
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "backpressure_control"
path = "src/lib.rs"

[[bin]]
name = "backpressure-control"
path = "src/main.rs"
