[package]
name = "token-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
# PyO3 for Python integration
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py39"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress indicators
indicatif = "0.17"

# Utilities
once_cell = "1.19"

[lib]
name = "token_streaming"
path = "src/lib.rs"

[[bin]]
name = "token-streaming"
path = "src/main.rs"
