[package]
name = "websocket-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
futures-util = "0.3"

# Python integration
pyo3 = { version = "0.22", features = ["auto-initialize", "extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "websocket_service"
path = "src/lib.rs"

[[bin]]
name = "websocket-service"
path = "src/main.rs"
